use java.util.Base64 instead of sun.misc.Base64Encoder/Decoder